--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
